--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: "Fira Sans","Helvetica Neue","Helvetica","Arial","sans-serif";
 }
+
+iframe[src^="https://runkit.com/e"]{
+  width: calc(100% + 170px) !important;
+}
+
+
